Assignment2.2/battleship-javadoc.err
Loading source files for package battleship...
Constructing Javadoc information...
Building index for all the packages and classes...
Standard Doclet version 20.0.1+9-FR
Building tree for all the packages and classes...
src\battleship\ColorMenu.java:21: error: invalid use of @param
 * @param window The view window associated with the color menu.
   ^
src\battleship\Controller.java:33: warning: no main description
	 * @author abhip
	   ^
src\battleship\Model.java:7: warning: no main description
 * @author abhip
   ^
Generating doc\battleship\ColorMenu.html...
Generating doc\battleship\Controller.html...
Generating doc\battleship\Controller.Timer.html...
src\battleship\Controller.java:37: warning: use of default constructor, which does not provide a comment
	public class Timer implements Runnable
	       ^
Generating doc\battleship\GraphicalInterface.html...
Generating doc\battleship\Model.html...
src\battleship\Model.java:268: error: @param name not found
 * @param x The x-coordinate of the selected position.
          ^
src\battleship\Model.java:269: error: @param name not found
 * @param y The y-coordinate of the selected position.
          ^
Generating doc\battleship\SolutionView.html...
Generating doc\battleship\Splashscreen.html...
Generating doc\battleship\View.html...
src\battleship\View.java:66: warning: no description for @return
	 * @return
	   ^
src\battleship\View.java:76: warning: no description for @return
 * @return
   ^
src\battleship\View.java:85: warning: no description for @return
 * @return
   ^
Generating doc\battleship\package-summary.html...
Generating doc\battleship\package-tree.html...
Generating doc\overview-tree.html...
Building index for all classes...
Generating doc\allclasses-index.html...
Generating doc\allpackages-index.html...
Generating doc\index-all.html...
Generating doc\search.html...
Generating doc\index.html...
Generating doc\help-doc.html...
3 errors
6 warnings
